--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -244,7 +244,7 @@
         [% END %]
 
         <script type="text/javascript" src="[% url.js %]/jquery.placeholder.js"></script>
-        <script src="[% url.js %]/linkspace.js"></script>
+        <script src="[% url.js %]/linkspace.js?v=100"></script>
 
         <!--[if IE 8]><script src="[% url.js %]/dashboard-ie8-fallback.js"></script><![endif]-->
         <!--[if !IE 8]><!--><script src="[% url.js %]/dashboard.js"></script><!--<![endif]-->
