--- a/views/data.tt
+++ b/views/data.tt
@@ -250,7 +250,7 @@
             <label for="views_other_user_id">Select user:</label>
                 <input type="hidden" name="views_other_user_id" id="views_other_user_id" value="[% views_other_user.id %]">
                 <input type="text" class="form-control" id="views_other_user_typeahead" autocomplete="off"
-                    name="views_other_user_typeahead" value="[% views_other_user.value %]" placeholder="Start typing...">
+                    name="views_other_user_typeahead" value="[% views_other_user.value | html %]" placeholder="Start typing...">
         </div>
     [% END %]
 [% END %]
