Fix entity encoding in display conditions

--- a/views/layout.tt
+++ b/views/layout.tt
@@ -155,11 +155,10 @@
         field will always displayed.</p>
 
     <div id="displayConditionsBuilder"
-        data-test="yoyoyo"
         [% IF column.display_fields.as_json AND NOT column.display_fields.as_json.match('^[{}\s]*$') %]
         data-filter-base="[% column.display_fields.base64 %]"
         [% END %]
-        data-filters='[[% FOR field IN all_columns %]{"id": "[% field.id %]", "label": "[% field.name | html_entity %]", "type": "string"}[% IF NOT loop.last %],[% END %][% END %]]'
+        data-filters='[[% FOR field IN all_columns %]{"id": "[% field.id %]", "label": "[% field.name | html | html %]", "type": "string"}[% IF NOT loop.last %],[% END %][% END %]]'
     ></div>
     <input type="hidden" id="displayConditions" name="display_fields">
     <p>Tip: You can use patterns [% whats_this('modalhelp_match') %] in your display conditions.</p>
