Fix user view limits not replacing table view limits
The previous table view limit functionality was not implemented to
enable the table limits to be overridden for specific users. Instead,
they were added to, which means that any stricter user view limits were
added to the user's limits rather than replacing them, allowing the user
to see more than expected.

--- a/views/table.tt
+++ b/views/table.tt
@@ -80,7 +80,8 @@
                 </div>
                 <div class="panel-body collapse" id="limit_view">
                     <div class="form-group">
-                        <label for="view_limit_id">By default restrict all users to records in this view:</label>
+                        <label for="view_limit_id">By default restrict all users to records in this view (these are replaced
+                            by any limits applied to a specific user):</label>
                         <select class="form-control" id="view_limit_id" name="view_limit_id">
                             <option></option>
                             [% FOREACH v IN layout_edit.global_view_summary %]
