--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -242,6 +242,7 @@
             <script src="[% url.js %]/bootstrap-select.min.js"></script>
         [% END %]
 
+        <script type="text/javascript" src="[% url.js %]/fengari-web.js"></script>
         <script type="text/javascript" src="[% url.js %]/jquery.placeholder.js"></script>
         <script src="[% url.js %]/linkspace.js?v=103"></script>
 
