--- a/views/layout.tt
+++ b/views/layout.tt
@@ -415,6 +415,14 @@
             <textarea class="form-control monospace" id="code_calc" name="code_calc" rows="10">[% column.code | html_entity %]</textarea>
         </div>
         <div class="form-group">
+            <label for="show_in_edit">Field visibility:</label>
+            <div class="checkbox">
+                <label>
+                    <input id="show_in_edit" type="checkbox" name="show_in_edit" [% IF column.show_in_edit %]checked[% END %]>Show this field when editing records
+                </label>
+            </div>
+        </div>
+        <div class="form-group">
             <label for="no_alerts_calc">Alerts:</label>
             <div class="checkbox">
                 <label>
